Add size filter checked when searching for shoes by size from index page

--- a/onlineshop/src/main/resources/templates/index.html
+++ b/onlineshop/src/main/resources/templates/index.html
@@ -305,7 +305,7 @@
         range.addEventListener("input", function () {
             const size = parseInt(range.value, 10);
             selectedSizeSpan.textContent = size;
-            selectedSizeLink.href = `/products/size/${size}`;
+            selectedSizeLink.href = `/products/all?sizes=${size}`;
         });
     </script>
 
